# nils-dylint

./: CLAUDE.md  Cargo.toml  README.md  rust-toolchain
blank_line_before_return/: Cargo.toml
blank_line_before_return/src/: lib.rs
blank_line_before_return/ui/: no_warn.rs  return_styles.rs  return_styles.stderr  should_warn.rs  should_warn.stderr
