[package]
name = "blank_line_before_return"
version = "0.1.2"
authors = ["Nils Loewen <nils@blockrewards.ca>"]
description = "Require a blank line before single-line `return` statements"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "2ac87a326884a598ea13857588ba9ffc2092b915" }
dylint_linting = "6.0.1"

[dev-dependencies]
dylint_testing = "6.0.1"

[package.metadata.rust-analyzer]
rustc_private = true
